Fix the media browser filters to fill the whole top area, so the files don;t wrap next to it.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -2959,3 +2959,5 @@ ul.links.inline li.book_add_child a {
 .manualcrop-selection-info {
   position: initial !important;
 }
+
+#media-browser-page .view-filters { float: none; }
